WIP #1068 - Initial pass at building and deploying on Java 11